Fixet alignment i home på billede

--- a/PBA-project/src/assets/styles/home.scss
+++ b/PBA-project/src/assets/styles/home.scss
@@ -476,6 +476,7 @@ p {
 
 img {
     width: 100%;
+    margin-right: 2%;
 }
 }
 
